# manimator

backend/: .env  main.py  pyproject.toml  requirements.txt  utils.py
backend/agents/: code_agent.py  debugger_agent.py  decompose_agent.py  updater_agent.py
backend/data/: add_embedding.py  manim_dataset.csv  manim_dataset.parquet  parquet_to_csv.py
backend/static_videos/: DisplayHelloText  FadeInHello  HelloWorldScene
backend/tools/: doc_tool.py  rag_tool.py
frontend/manimator/: index.html  package-lock.json  package.json
frontend/manimator/src/: App.tsx  ChatPage.tsx  LandingPage.tsx  MainContent.tsx  SideChatBar.tsx  VideoCanvas.tsx  index.css
